[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchledger"
version = "0.1.0"
description = "On-chain behavioral clustering & cross-chain risk tracing engine"
authors = [{ name = "TorchLedger Team", email = "founders@torchledger.io" }]
license = { text = "AGPL-3.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "web3>=6.18",
    "kafka-python>=2.0",
    "neo4j>=5.20",
    "clickhouse-driver>=0.2",
    "redis>=5.0",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "hdbscan>=0.8",
    "torch>=2.3",
    "torch-geometric>=2.5",
    "httpx>=0.27",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "strawberry-graphql>=0.230",
    "alembic>=1.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "httpx>=0.27",
    "faker>=25.2",
    "factory-boy>=3.3",
]

[project.scripts]
torchledger = "api.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=torchledger --cov-report=term-missing --cov-fail-under=80"
